# Euclid

./: .clang-format  .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  dir_0b2e010aa29209f16c173d9ecfac486a.html  dir_0e6ccc96192ed3a106b24bfdbc5fbc94.html  dir_16ba29dd73a1312a404b496a6181d22a.html  dir_17fae257e6db65979afcc4b9b8b03690.html  dir_1b35f81dd7a98d4409d615d7dc760ed7.html  dir_2281701c1edb4468336d859babae729a.html  dir_2a754156ae2f95b718d0657bebf0698f.html  dir_3e21ed6caeb6f3a900341bfb6192d7a8.html  dir_45000ebf42a408278871da9645a58e3e.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5414e0ac18a32f162a262f528dd28859.html  dir_69f7636b4e3c0ee71f4fabc1c5df92cd.html  dir_762188563005107381341a86e0f7c5cc.html  dir_79f17b020dedc5430a3cacf1eaadcf15.html  dir_8000b0ed473728a5fa62da05a6b3c1da.html  dir_8e0b2374de66c2775b53d1b25640477f.html  dir_91d16681bbae6d66d9d83d55b716d941.html  dir_9338863f5ab15f10e6417b90649da6de.html  dir_9da9477ebca5b4a9570c7bb7244fdc48.html  dir_a0ff040ec2d7d3b23ae9b4ac036bb9c8.html  dir_a9d97b11e1df972fcf536334fa773980.html  dir_ab63fa865df6b502afb0c2d99c282520.html  dir_ae5f5bbec347006e2f99e72d7a7fee0b.html  dir_aff5fc34e4c870d20a5bc446613211e4.html  dir_b0535b988b0639fe2619ae6c5671fde3.html  dir_b736ab836291ea5ff67c72d2035ec7f6.html  dir_b7fa700857f088aad68b7575e875815d.html  dir_bedb5f21bbfebcfaea275f280e36daad.html  dir_c959784ec8163a81dc816b85d490d91e.html  dir_cb3a80c95bf72f69d367d78c8b3a49cf.html  (+62 more)
cmake/: Euclid.cmake  EuclidConfig.cmake.in
cmake/Modules/: FindEuclid.cmake  FindLibigl.cmake  FindSpectra.cmake
d0/d0c/: classEuclid_1_1PerspRasCamera-members.html
d0/d3f/: classEuclid_1_1Timer.html  classEuclid_1_1Timer.js
d0/d4a/: classEuclid_1_1PlyWriter-members.html
d0/d64/: TTKMesh_8h_source.html
d0/d95/: RayTracer_8h_source.html
d0/dbb/: classEuclid_1_1CommonPlyReader.html  classEuclid_1_1CommonPlyReader.js
d0/df7/: DelaunayMesh_8h_source.html  classEuclid_1_1ViewSphere-members.html
d0/dfc/: MeshTopology_8h_source.html
d1/d10/: ViewSphere_8h_source.html
d1/d21/: classEuclid_1_1HKS-members.html
d1/d75/: group__PkgMeshDefs.html
d1/d8a/: group__PkgNumeric.html  group__PkgNumeric.js
d1/d9b/: classEuclid_1_1AABB-members.html
d1/dd5/: classEuclid_1_1PlyUintProperty.html  classEuclid_1_1PlyUintProperty.js
d1/dd6/: Statistics_8h_source.html
d1/de4/: ViewEntropy_8h_source.html
d2/d00/: classEuclid_1_1OrthoRasCamera-members.html
d2/d0c/: classEuclid_1_1PlyProperty-members.html
d2/d1c/: structEuclid_1_1SplitSite-members.html
d2/d24/: ProxyView_8h_source.html
d2/d50/: group__PkgTriMeshGeometry.html  group__PkgTriMeshGeometry.js
d2/d67/: group__PkgTransformation.html  group__PkgTransformation.js
d2/d6b/: classEuclid_1_1OrthoRayCamera-members.html
d2/d6e/: classEuclid_1_1PlyReader.html  classEuclid_1_1PlyReader.js
d2/db0/: classEuclid_1_1PlyHeader-members.html
d2/dee/: classEuclid_1_1Holomorphic__one__forms__parameterizer3.html  classEuclid_1_1Holomorphic__one__forms__parameterizer3.js  group__PkgUtil.html  group__PkgUtil.js
d3/d05/: classEuclid_1_1ViewSphere.html  classEuclid_1_1ViewSphere.js
d3/d38/: group__PkgMeshHelpers.html  group__PkgMeshHelpers.js
d3/d58/: InputFixer_8h_source.html
d3/d61/: modules_8h_source.html
d3/d70/: BiharmonicDistance_8h_source.html  group__PkgHolomorphic.html  group__PkgHolomorphic.js
d4/d79/: group__PkgDEC.html  (+1 more)
data/: beetle.off  bunny_vn.ply  chair.off  cube_ascii.ply  cube_binary_little_endian.ply  cube_fc.off  cube_vc.off  dragon.ply  face.off  frag_index.spv  kitten.off  rocker_arm.off  sharp_sphere.off  vert.spv  vert_color.spv  vert_depth.spv  vert_index.spv  vert_silhouette.spv
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  index.md  modules.h  runtest.md
examples/: CMakeLists.txt  config.h.in
examples/hello_world/: CMakeLists.txt  main.cpp
examples/spectral/: CMakeLists.txt  main.cpp  plot.py
gallery/: README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  (+69 more)
test/: CMakeLists.txt  config.h.in  main.cpp
test/Analysis/: test_AABB.cpp  test_Descriptor.cpp  test_OBB.cpp  test_Segmentation.cpp  test_ViewSelection.cpp
test/BoundingVolume/: test_AABB.cpp  test_OBB.cpp
test/Descriptor/: test_HKS.cpp  test_Histogram.cpp  test_SpinImage.cpp  test_WKS.cpp
test/Distance/: test_BiharmonicDistance.cpp  test_DiffusionDistance.cpp  test_GeodesicsInHeat.cpp
test/FeatureDetection/: test_NativeHKS.cpp
test/Geometry/: test_Geodesics.cpp  test_KernelGeometry.cpp  test_MeshBuilder.cpp  test_MeshHelpers.cpp  test_MeshProperties.cpp  test_Polyhedron_3.cpp  test_PrimitiveGenerator.cpp  test_Spectral.cpp  test_Surface_mesh.cpp  test_TriMeshGeometry.cpp
test/IO/: test_InputFixer.cpp  test_ObjIO.cpp  test_OffIO.cpp  test_PlyIO.cpp
test/ImgProc/: test_Histogram.cpp
test/Math/: test_Distance.cpp  test_Matrix.cpp  test_Numeric.cpp  test_Statistics.cpp  test_Transformation.cpp  test_Vector.cpp
test/MeshUtil/: test_CGALMesh.cpp  test_EigenMesh.cpp  test_MeshHelpers.cpp  test_PrimitiveGenerator.cpp  test_TTKMesh.cpp
test/Parameterization/: test_HolomorphicOneForms.cpp  test_RicciFlow.cpp  test_SCP.cpp  test_SeamMesh.cpp
test/Render/: test_Rasterizer.cpp  test_RayTracer.cpp  test_RenderCore.cpp
test/Segmentation/: test_RandomWalk.cpp
test/SurfaceDelaunay/: test_DelaunayMesh.cpp
test/Topology/: test_Chain.cpp  test_HomologyGenerator.cpp  test_HomotopyGenerator.cpp  test_MeshTopology.cpp
test/Util/: test_Color.cpp  test_Memory.cpp  test_Serialize.cpp  test_Timer.cpp
test/ViewSelection/: test_ProxyView.cpp  test_ViewEntropy.cpp  test_ViewSphere.cpp
(+386 files in other folders)
